--- a/index.html
+++ b/index.html
@@ -7,9 +7,218 @@
     <title>12 colonne</title>
   </head>
   <body>
-    
+
       <h1>Esercitazione griglia 12 colonne
       </h1>
+      <h2>12 bool grid
+      </h2>
+      <div class="container">
+        <div class="col-12">
+          <div class="box">
+            colonna 12
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-1">
+          <div class="box">
+            colonna 1 prova
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-4">
+          <div class="box">
+            colonna 4
+          </div>
+        </div>
+        <div class="col-8">
+          <div class="box">
+            colonna 8
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-1">
+          <div class="box">
+            col 1
+          </div>
+        </div>
+        <div class="col-5">
+          <div class="box">
+            col 5
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="box">
+            col 3
+          </div>
+        </div>
+        <div class="col-3">
+          <div class="box">
+            col 3
+          </div>
+        </div>
+        <!-- div aggiuntivo esperimento -->
+        <div class="col-4">
+          <div class="box">
+            col 4
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="box">
+            col 4
+          </div>
+        </div>
+        <div class="col-4">
+          <div class="box">
+            col 4
+          </div>
+        </div>
+      </div>
+
+      <h2>Nested grid
+      </h2>
+      <div class="container">
+        <div class="col-6 padd-0">
+          <div class="container">
+            <div class="col-2">
+              <div class="box">
+                col 2
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="box">
+                col 2
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="box">
+                col 8
+              </div>
+            </div>
+            <div class="col-12">
+              <div class="box">
+                col 12
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-6 padd-0">
+          <div class="container">
+            <div class="col-2">
+              <div class="box">
+                col 2
+              </div>
+            </div>
+            <div class="col-2">
+              <div class="box">
+                col 2
+              </div>
+            </div>
+            <div class="col-8">
+              <div class="box">
+                col 8
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="box">
+                col 4
+              </div>
+            </div>
+            <div class="col-5">
+              <div class="box">
+                col 5
+              </div>
+            </div>
+            <div class="col-3">
+              <div class="box">
+                col 3
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <h2>Offet grid
+      </h2>
+      <div class="container">
+        <div class="col-8 offset-2">
+          <div class="box">
+            col 8
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-4">
+          <div class="box">
+            col 4
+          </div>
+        </div>
+        <div class="col-4 offset-4">
+          <div class="box">
+            col 4
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        
+      </div>
 
   </body>
 </html>
