smanettamento vario, job done

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
         </div>
       </div>
 
-      <h2>Offet grid
+      <h2>Offset grid
       </h2>
       <div class="container">
         <div class="col-8 offset-2">
@@ -212,12 +212,37 @@
         </div>
         <div class="col-4 offset-4">
           <div class="box">
-            col 4
+            col 4 offset 4
           </div>
         </div>
       </div>
       <div class="container">
-        
+        <div class="col-6 offset-6">
+          <div class="box">
+            col 6 offset 6
+          </div>
+        </div>
+      </div>
+      <div class="container">
+        <div class="col-8 offset-2 padd-0">
+          <div class="container">
+            <div class="col-3 offset-1">
+              <div class="box">
+                col 3 offset 1
+              </div>
+            </div>
+            <div class="col-4">
+              <div class="box">
+                col 4
+              </div>
+            </div>
+            <div class="col-3 offset-1">
+              <div class="box">
+                col 3 offset 1
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
 
   </body>
